2013-03-26  Leo Liu  <sdl.web@gmail.com>

	* semantic/senator.el (senator-copy-tag-to-register): Move
	register handling logic from register.el.  (Bug#14052)

2013-03-21  Eric Ludlam  <zappo@gnu.org>

	* semantic.el (navigate-menu): Yank Tag :enable. Make sure
	`senator-tag-ring' is bound.
	(semantic-parse-region-default): Stop reversing the output of
	parse-whole-stream.
	(semantic-repeat-parse-whole-stream): Append returned tags
	differently, so they come out in the right order.

	* semantic/sb.el (semantic-sb-filter-tags-of-class): New option.
	(semantic-sb-fetch-tag-table): Filter tags being bucketed to
	exclude tags belonging to above filtered classes.

	* semantic/find.el (semantic-filter-tags-by-class): New function.

	* semantic/tag-ls.el (semantic-tag-similar-p-default): Add
	short-circuit in case tag1 and 2 are identical.

	* semantic/analyze/fcn.el
	(semantic-analyze-dereference-metatype-stack): Use
	`semantic-tag-similar-p' instead of 'eq' when comparing two tags
	during metatype evaluation in case they are the same, but not the
	same node. (Tweaked patch from Tomasz Gajewski) (Tiny change)

	* semantic/db-find.el (semanticdb-partial-synchronize): Fix
	require to semantic/db-typecache to be correct.
	(semanticdb-find-tags-external-children-of-type): Make this a
	brutish search by default.

	* semantic/sort.el
	(semantic-tag-external-member-children-default): When calling
	`semanticdb-find-tags-external-children-of-type', pass in the
	input tag as the place to start searching for externally defined
	methods.

	* semantic/db-file.el (semanticdb-default-save-directory): Doc
	fix: Add ref to default value.

	* semantic/complete.el (semantic-complete-post-command-hook): When
	detecting if cursor is outside completion area, do so if cursor
	moves before start of overlay, or the original starting location
	of the overlay (i.e., if user deletes past beginning of the
	overlay region).
	(semantic-complete-inline-tag-engine): Initialize original start